--- a/backend/package.json
+++ b/backend/package.json
@@ -12,13 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "argon2": "^0.28.7",
+    "axios": "^1.4.0",
     "connect-session-sequelize": "^7.1.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "node": "^19.3.0",
+    "path": "^0.12.7",
     "sequelize": "^6.21.3"
   }
 }
